BUGFIX: Fix modeladmin scrollbars in ie7
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@76268 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ModelAdmin.css
+++ b/css/ModelAdmin.css
@@ -67,7 +67,7 @@ body.ModelAdmin #ResultTable_holder {
 }
 
 body.ModelAdmin #right{
-	overflow:auto;
+	overflow:auto !important;
 }
 
 body.ModelAdmin #right #ModelAdminPanel {
